objects/Forecast_Detail__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>EExternal ID that will allow for integration purposes specifically on Type Actuals.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LatestComment__c</fullName>
        <description>This field is NOT part of any Forecast Detail page layouts. This field is used for &quot;ADM_Forecasting&quot; visualforce page to display the latest comment in LATEST COMMENT column.</description>
        <label>LatestComment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>M10__c</fullName>
        <description>Month fields capturing data from any Type perspective. (July)</description>
        <label>M10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M11__c</fullName>
        <description>Month fields capturing data from any Type perspective. (August)</description>
        <label>M11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M12__c</fullName>
        <description>Month fields capturing data from any Type perspective. (September)</description>
        <label>M12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Forecast.</description>
        <label>Parent Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>Forecast Details</relationshipLabel>
        <relationshipName>Forecast_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <description>This will represent a 4 digit year period.</description>
        <label>Period</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <description>Formula field calculating sum of M1__c, M2__c and M3__c.</description>
        <formula>M1__c  +  M2__c  +  M3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <description>Formula field calculating sum of M4__c, M5__c and M6__c.</description>
        <formula>M4__c  +  M5__c  +  M6__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <description>Formula field calculating sum of M7__c, M8__c and M9__c.</description>
        <formula>M7__c  +  M8__c  +  M9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Formula field calculating sum of Q1__c, Q2__c, Q3__c and Q4__c</description>
        <formula>Q1__c  +  Q2__c  +  Q3__c  +  Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Picklist identifies the type of Forecast Detail record this is. Whether it is a user input Forecast, Actuals coming from TED, Guidance Forecast automated records, or YoY Variance programmatic processed records.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Guidance Forecast</fullName>
                </value>
                <value>
                    <fullName>YoY Variance</fullName>
                </value>
                <value>
                    <fullName>Auto-Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Forecast Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Parent_Forecast__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Parent_Forecast__c</columns>
        <columns>Type__c</columns>
        <columns>Period__c</columns>
        <columns>Q1__c</columns>
        <columns>Q2__c</columns>
        <columns>Q3__c</columns>
        <columns>Q4__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Carlos</value>
        </filters>
        <label>Recently Created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Forecast Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>